--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <a class="navigation-logo" href="#">Web<span>Studio</span></a>
             <ul class="navigation-list">
                 <li class="navigation-list-item">
-                    <a class="navigation-list-link" href="/index.html">Agencja</a></li>
+                    <a class="navigation-list-link" href="./index.html">Agencja</a></li>
                 <li class="navigation-list-item">
-                    <a class="navigation-list-link" href="/portfolio.html">Portfolio</a></li>
+                    <a class="navigation-list-link" href="./portfolio.html">Portfolio</a></li>
                 <li class="navigation-list-item">
                     <a class="navigation-list-link" href="#">Kontakt</a></li>
             </ul>   
