--- a/portfolio.html
+++ b/portfolio.html
@@ -18,10 +18,10 @@
             <a class="navigation-logo" href="#">Web<span>Studio</span></a>
             <ul class="navigation-list">
                 <li class="navigation-list-item">
-                    <a class="navigation-list-link" href="/index.html">Agencja</a>
+                    <a class="navigation-list-link" href="./index.html">Agencja</a>
                 </li>
                 <li class="navigation-list-item">
-                    <a class="navigation-list-link" href="/portfolio.html">Portfolio</a>
+                    <a class="navigation-list-link" href="./portfolio.html">Portfolio</a>
                 </li>
                 <li class="navigation-list-item">
                     <a class="navigation-list-link" href="#">Kontakt</a>
