--- a/index.html
+++ b/index.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"> 
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <title>Studio</title>
 </head>
+
 <body>
     <header class="header">
         <nav class="navigation">
-            <a class="navigation-logo" href="#">Web<span>Studio</span></a>
+            <img src="images/WebStudio.svg" alt="Logo" width="145px" height="31px">
             <ul class="navigation-list">
                 <li class="navigation-list-item">
-                    <a class="navigation-list-link" href="./index.html">Agencja</a></li>
+                    <a class="navigation-list-link" href="./index.html">Agencja</a>
+                </li>
                 <li class="navigation-list-item">
-                    <a class="navigation-list-link" href="./portfolio.html">Portfolio</a></li>
+                    <a class="navigation-list-link" href="./portfolio.html">Portfolio</a>
+                </li>
                 <li class="navigation-list-item">
-                    <a class="navigation-list-link" href="#">Kontakt</a></li>
-            </ul>   
+                    <a class="navigation-list-link" href="#">Kontakt</a>
+                </li>
+            </ul>
         </nav>
         <a class="contact-top" href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a class="contact-top" href="tel:48111111111">+48 111 111 111</a>
@@ -34,77 +42,84 @@
             <button class="modal-button" type="button">Zamów usługę!</button>
         </section>
         <!--Lorem ipsum-->
-            <section>
-                <ul>
-                    <li>
-                      <h4>LOREM IPSUM</h4>
-                      <p class="decription-lorem">
+        <section>
+            <ul>
+                <li>
+                    <h4>LOREM IPSUM</h4>
+                    <p class="decription-lorem">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
                         sodales dui. Interdum et malesuada
-                      </p>
-                    </li>
-                    <li>
-                      <h4>LOREM IPSUM</h4>
-                      <p class="decription-lorem">
+                    </p>
+                </li>
+                <li>
+                    <h4>LOREM IPSUM</h4>
+                    <p class="decription-lorem">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
                         sodales dui. Interdum et malesuada
-                      </p>
-                    </li>
-                    <li>
-                      <h4>LOREM IPSUM</h4>
-                      <p class="decription-lorem">
+                    </p>
+                </li>
+                <li>
+                    <h4>LOREM IPSUM</h4>
+                    <p class="decription-lorem">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
                         sodales dui. Interdum et malesuada
-                      </p>
-                    </li>
-                    <li>
-                      <h4>LOREM IPSUM</h4>
-                      <p class="decription-lorem">
+                    </p>
+                </li>
+                <li>
+                    <h4>LOREM IPSUM</h4>
+                    <p class="decription-lorem">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
                         sodales dui. Interdum et malesuada
-                      </p>
-                    </li>
-                  </ul>
-            </section>
-            <!--What we do-->
-            <section>
-                <h2>Czym się zajmujemy</h2>
-                <ul><li><img src="images/main_what_we_do/what_we_do_img1.jpg" alt="developing" width="370" height="294"></li>
+                    </p>
+                </li>
+            </ul>
+        </section>
+        <!--What we do-->
+        <section>
+            <h2>Czym się zajmujemy</h2>
+            <ul>
+                <li><img src="images/main_what_we_do/what_we_do_img1.jpg" alt="developing" width="370" height="294">
+                </li>
                 <li><img src="images/main_what_we_do/what_we_do_img2.jpg" alt="testing" width="370" height="294"></li>
                 <li><img src="images/main_what_we_do/what_we_do-img3.jpg" alt="designing" width="370" height="294"></li>
-                </ul>
-            </section>
-            <!--Our team-->
-            <section class="our-team">
-                <h2>Nasz zespół</h2>
-                <ul>
-                    <li><img src="images/main_our_team/main_product_designer.jpg" alt="product designer" width="270" height="260">
-                        <h5 class="employee-name">John Doe</h5>
-                        <p class="description-job">Product Designer</p>
-                    </li>
-                    <li><img src="images/main_our_team/main_frontend_dev.jpg" alt="frontend developer" width="270" height="260">
-                        <h5 class="employee-name">John Doe</h5>
-                        <p class="description-job">Frontend Developer</p>
-                    </li>
-                    <li><img src="images/main_our_team/main_marketing.jpg" alt="marketing" width="270" height="260">
-                        <h5 class="employee-name">John Doe</h5>
-                        <p class="description-job">Marketing</p>
-                    </li>
-                    <li><img src="images/main_our_team/main_ui_designer.jpg" alt="ui designer" width="270" height="260">
-                        <h5 class="employee-name">John Doe</h5>
-                        <p class="description-job"p>UI Designer</p>
-                    </li>
-                </ul>
-            </section>
+            </ul>
+        </section>
+        <!--Our team-->
+        <section class="our-team">
+            <h2>Nasz zespół</h2>
+            <ul>
+                <li><img src="images/main_our_team/main_product_designer.jpg" alt="product designer" width="270"
+                        height="260">
+                    <h5 class="employee-name">John Doe</h5>
+                    <p class="description-job">Product Designer</p>
+                </li>
+                <li><img src="images/main_our_team/main_frontend_dev.jpg" alt="frontend developer" width="270"
+                        height="260">
+                    <h5 class="employee-name">John Doe</h5>
+                    <p class="description-job">Frontend Developer</p>
+                </li>
+                <li><img src="images/main_our_team/main_marketing.jpg" alt="marketing" width="270" height="260">
+                    <h5 class="employee-name">John Doe</h5>
+                    <p class="description-job">Marketing</p>
+                </li>
+                <li><img src="images/main_our_team/main_ui_designer.jpg" alt="ui designer" width="270" height="260">
+                    <h5 class="employee-name">John Doe</h5>
+                    <p class="description-job" p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer>
-        <a class="navigation-logo" href="#">Web<span>Studio</span></a>
-    <ul>
-        <li><address class="address">m. Warszawa, Aleje Jerozolimskie 21</address></li>
-        <li><a class="footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="footer-contact" href="tel:48111111111">+48 111 111 111</a></li>
-    </ul>
+        <img src="./images/WebStudio_white.svg" alt="Logo" width="145px" height="31px">
+        <ul>
+            <li>
+                <address class="address">m. Warszawa, Aleje Jerozolimskie 21</address>
+            </li>
+            <li><a class="footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="footer-contact" href="tel:48111111111">+48 111 111 111</a></li>
+        </ul>
     </footer>
 
 </body>
+
 </html>
