--- a/portfolio.html
+++ b/portfolio.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <title>Studio</title>
     <title>Portfolio</title>
 </head>
+
 <body>
     <header class="header">
         <nav class="navigation">
-            <a class="navigation-logo" href="#">Web<span>Studio</span></a>
+            <img src="images/WebStudio.svg" alt="Logo" width="145px" height="31px">
             <ul class="navigation-list">
                 <li class="navigation-list-item">
                     <a class="navigation-list-link" href="./index.html">Agencja</a>
@@ -33,46 +38,55 @@
     </header>
     <main>
 
-    <ul>
-        <li class="portfolio-category"><button class="portfolio-button" type="button">Wszystkie</button></li>
-        <li class="portfolio-category"><button class="portfolio-button" type="button">Strony</button></li>
-        <li class="portfolio-category"><button class="portfolio-button" type="button">Aplikacje</button></li>
-        <li class="portfolio-category"><button class="portfolio-button" type="button">Dizajn</button></li>
-        <li class="portfolio-category"><button class="portfolio-button" type="button">Marketing</button</li>
-    </ul>
+        <ul>
+            <li class="portfolio-category"><button class="portfolio-button" type="button">Wszystkie</button></li>
+            <li class="portfolio-category"><button class="portfolio-button" type="button">Strony</button></li>
+            <li class="portfolio-category"><button class="portfolio-button" type="button">Aplikacje</button></li>
+            <li class="portfolio-category"><button class="portfolio-button" type="button">Dizajn</button></li>
+            <li class="portfolio-category"><button class="portfolio-button" type="button">Marketing</button< /li>
+        </ul>
 
-    <ul>
-        <li class="portfolio-item"><img src="/images/portfolio/technocrack.jpg" alt="Technocrack" width="370px" height="294px"></li>
-        <h3>Technocrack</h3>
-        <p class="decription-portfolio">Strona internetowa</p>
-        <li class="portfolio-item"><img src="/images/portfolio/new-orlean-golder-star.jpg" alt="Grafika New Orlean vs Golder Star" width="370px" height="294px"></li>
-        <h3>Grafika New Orlean vs Golden Sar</h3>
-        <p class="decription-portfolio">Dizajns</p>
-        <li class="portfolio-item"><img src="/images/portfolio/seafood.jpg" alt="Restauracja Seafood" width="370px" height="294px"></li>
-        <h3>Restauracja Seafood</h3>
-        <p class="decription-portfolio">Aplikacja</p>
-        <li class="portfolio-item"><img src="/images/portfolio/prime.jpg" alt="Projekt Prime" width="370px" height="294px"></li>
-        <h3>Projekt Prime</h3>
-        <p class="decription-portfolio">Marketing</p>
-        <li class="portfolio-item"><img src="/images/portfolio/boxes.jpg" alt="Projekt Boxes" width="370px" height="294px"></li>
-        <h3>Projekt Boxes</h3>
-        <p class="decription-portfolio">Aplikacja</p>
-        <li class="portfolio-item"><img src="/images/portfolio/no-borders.jpg" alt="Inspiration has no Borders" width="370px" height="294px"></li>
-        <h3>Inspiration has no Borders</h3>
-        <p class="decription-portfolio">Strona internetowa</p>
-        <li class="portfolio-item"><img src="/images/portfolio/limited-edition.jpg" alt="Magazyn Limited Edition" width="370px" height="294px"></li>
-        <h3>Magazyn Limited Edition</h3>
-        <p class="decription-portfolio">Dizajn</p>
-        <li class="portfolio-item"><img src="/images/portfolio/lab.jpg" alt="Projekt LAB" width="370px" height="294px"></li>
-        <h3>Projekt LAB</h3>
-        <p class="decription-portfolio">Marketing</p>
-        <li class="portfolio-item"><img src="/images/portfolio/growing-business.jpg" alt="Growing Business" width="370px" height="294px"></li>
-        <h3>Growing Business</h3>
-        <p class="decription-portfolio">Aplikacja</p>
-    </ul>
+        <ul>
+            <li class="portfolio-item"><img src="/images/portfolio/technocrack.jpg" alt="Technocrack" width="370px"
+                    height="294px"></li>
+            <h3>Technocrack</h3>
+            <p class="decription-portfolio">Strona internetowa</p>
+            <li class="portfolio-item"><img src="/images/portfolio/new-orlean-golder-star.jpg"
+                    alt="Grafika New Orlean vs Golder Star" width="370px" height="294px"></li>
+            <h3>Grafika New Orlean vs Golden Sar</h3>
+            <p class="decription-portfolio">Dizajns</p>
+            <li class="portfolio-item"><img src="/images/portfolio/seafood.jpg" alt="Restauracja Seafood" width="370px"
+                    height="294px"></li>
+            <h3>Restauracja Seafood</h3>
+            <p class="decription-portfolio">Aplikacja</p>
+            <li class="portfolio-item"><img src="/images/portfolio/prime.jpg" alt="Projekt Prime" width="370px"
+                    height="294px"></li>
+            <h3>Projekt Prime</h3>
+            <p class="decription-portfolio">Marketing</p>
+            <li class="portfolio-item"><img src="/images/portfolio/boxes.jpg" alt="Projekt Boxes" width="370px"
+                    height="294px"></li>
+            <h3>Projekt Boxes</h3>
+            <p class="decription-portfolio">Aplikacja</p>
+            <li class="portfolio-item"><img src="/images/portfolio/no-borders.jpg" alt="Inspiration has no Borders"
+                    width="370px" height="294px"></li>
+            <h3>Inspiration has no Borders</h3>
+            <p class="decription-portfolio">Strona internetowa</p>
+            <li class="portfolio-item"><img src="/images/portfolio/limited-edition.jpg" alt="Magazyn Limited Edition"
+                    width="370px" height="294px"></li>
+            <h3>Magazyn Limited Edition</h3>
+            <p class="decription-portfolio">Dizajn</p>
+            <li class="portfolio-item"><img src="/images/portfolio/lab.jpg" alt="Projekt LAB" width="370px"
+                    height="294px"></li>
+            <h3>Projekt LAB</h3>
+            <p class="decription-portfolio">Marketing</p>
+            <li class="portfolio-item"><img src="/images/portfolio/growing-business.jpg" alt="Growing Business"
+                    width="370px" height="294px"></li>
+            <h3>Growing Business</h3>
+            <p class="decription-portfolio">Aplikacja</p>
+        </ul>
     </main>
     <footer>
-        <a class="navigation-logo" href="#">Web<span>Studio</span></a>
+        <img src="./images/WebStudio_white.svg" alt="Logo" width="145px" height="31px">
         <ul>
             <li>
                 <address class="address">m. Warszawa, Aleje Jerozolimskie 21</address>
@@ -82,4 +96,5 @@
         </ul>
     </footer>
 </body>
+
 </html>
