--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header class="header">
         <nav class="navigation">
-            <img src="images/WebStudio.svg" alt="Logo" width="145px" height="31px">
+            <a class="navigation-logo" href="#">Web<span>Studio</span></a>
             <ul class="navigation-list">
                 <li class="navigation-list-item">
                     <a class="navigation-list-link" href="./index.html">Agencja</a>
@@ -110,7 +110,7 @@
         </section>
     </main>
     <footer>
-        <img src="./images/WebStudio_white.svg" alt="Logo" width="145px" height="31px">
+        <a class="navigation-logo" href="#">Web<span class="span-footer">Studio</span></a>
         <ul>
             <li>
                 <address class="address">m. Warszawa, Aleje Jerozolimskie 21</address>
